--- a/styles.css
+++ b/styles.css
@@ -219,8 +219,16 @@ h2 {
 p {
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 1.25rem;
+  font-size: 3rem;
   line-height: 2.5rem;
+}
+
+.media-paragraph {
+  font-family: ivymode, sans-serif;
+  font-weight: 400;
+  font-size: 2.5rem;
+  line-height: 2.8rem;
+  font-style: normal;
 }
 
 .yellow-dot {
@@ -232,7 +240,16 @@ p {
   margin: 0 0.5rem 0 0;
 }
 
-.yellow-dot:hover {
+.yellow-dot-in-bg {
+  border-radius: 25px;
+  height: 50px;
+  width: 50px;
+  flex: 0 0 50px;
+  background-color: #ffee95;
+  margin: 0 0.5rem 0 0;
+}
+
+.yellow-dot-in-bg:hover {
   cursor: dot;
 }
 
@@ -431,4 +448,52 @@ h4 {
 
 .about-bg-color {
   background-color: black;
+}
+.circle-bg-media {
+}
+.circle-bg-media1 {
+  background-image: none;
+}
+
+/* media */
+
+@media (max-width: 770px) {
+  body {
+    background-color: white;
+  }
+  .media-h1 {
+    display: none;
+  }
+  .img-yellow {
+    display: none;
+  }
+  .yellow-dot-in-bg {
+    display: none;
+  }
+
+  .project-title-media {
+    font-size: 1.25rem;
+    margin: 1rem;
+  }
+
+  .media-paragraph {
+    font-size: 5.5em;
+    line-height: 6rem;
+    color: black;
+    margin: 1rem;
+  }
+  .media-p {
+    display: none;
+  }
+  .circle-bg-media {
+    display: block;
+    width: 100%;
+    height: 545px;
+    background-position: center;
+    background-size: cover;
+    background-image: url("img/background-circle.png");
+  }
+  .vertical-line {
+    display: none;
+  }
 }
