--- a/styles.css
+++ b/styles.css
@@ -320,24 +320,52 @@ h3 {
 
 /* project.html*/
 
-.grid-container-right {
-  display: grid;
-  grid-template-columns: 904px 440px;
-  grid-auto-rows: 610px;
-  margin-top: 120px;
-  justify-content: center;
-  gap: 3rem;
-  max-height: 100vh;
+.case-wrapper-row {
+  display: flex;
+  flex-direction: row;
+  margin-top: 126px;
 }
-.grid-container-left {
-  display: grid;
-  grid-template-columns: 440px 904px;
-  grid-auto-rows: 610px;
-  margin-top: 112px;
-  justify-content: center;
-  gap: 3rem;
-  max-height: 100vh;
-  margin-bottom: 160px;
+.case-container-column {
+  display: flex;
+  flex-direction: column;
+  margin: 0 2.5rem;
+  flex: 1;
+}
+.last-row {
+  margin-bottom: 4rem;
+}
+.paragraph-20 {
+  font-size: 1.25rem;
+}
+
+.case-img-size {
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 440px;
+}
+
+.case-1 {
+  background-image: url(img/image1.jpg);
+}
+
+.case-2 {
+  background-image: url(img/image2.jpg);
+}
+
+.case-3 {
+  background-image: url(img/image3.jpg);
+}
+
+.case-4 {
+  background-image: url(img/image4.jpg);
+}
+
+.case-5 {
+  background-image: url(img/IMG_4412.jpg);
+
+  /* width: 660px;
+  height: 440px; */
 }
 
 /* project1.html */
@@ -449,6 +477,9 @@ h4 {
 .logo-media {
   display: none;
 }
+.about-wrapper {
+  color: white;
+}
 
 /* A grid of fun */
 
@@ -526,7 +557,7 @@ h4 {
   grid-row: span 4;
 }
 
-/* media */
+/* media index.html*/
 
 @media (max-width: 500px) {
   body {
@@ -598,5 +629,31 @@ h4 {
     display: flex;
     justify-content: center;
     padding-top: 2rem;
+  }
+  .case-wrapper-row {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+  }
+  .case-top {
+    margin-top: 5.5rem;
+  }
+  .case-img-size {
+    height: 225px;
+  }
+  .case-container-column {
+    margin: 2rem 1rem;
+  }
+  .case-empty {
+    display: none;
+  }
+  .paragraph-20 {
+    line-height: 1.2;
+  }
+  .case-container-column h4 {
+    margin-top: 1rem;
+  }
+  .last-row {
+    display: 2rem;
   }
 }
