--- a/styles.css
+++ b/styles.css
@@ -116,9 +116,7 @@ a:visited {
   padding-left: 2rem;
 }
 
-/* .arrow-down {
-  align-items: flex-end;
-} */
+/* nav menu ends */
 
 .img-yellow {
   margin: 0;
@@ -167,6 +165,7 @@ a:visited {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 .bg-line1 {
   background-color: #ffee95;
@@ -181,6 +180,21 @@ a:visited {
 }
 .bg-line4 {
   background-color: #00c690;
+}
+
+.arrow-down {
+  padding-top: 2rem;
+  display: flex;
+  align-items: center;
+}
+.arrow-down-position {
+  position: absolute;
+  bottom: 2.5rem;
+  left: 50%;
+  transform: translate(-50%);
+}
+.arrow-down-white {
+  filter: invert(1);
 }
 
 h2 {
@@ -219,7 +233,7 @@ p {
   font-style: normal;
 }
 
-.media-paragraph {
+.intro-paragraph {
   font-family: ivymode, sans-serif;
   font-weight: 400;
   font-size: 2.5rem;
@@ -267,6 +281,7 @@ p {
 
 .color-textbox {
   background-color: black;
+  position: relative;
 }
 
 .text-container-quote {
@@ -282,6 +297,7 @@ p {
   font-weight: 400;
   font-style: normal;
 }
+/* index ends before footer */
 
 /* Footer */
 
@@ -311,6 +327,17 @@ h3 {
   font-size: 2rem;
   font-weight: normal;
   color: black;
+}
+
+.arrow-up {
+  transform: rotate(180deg);
+  margin-bottom: 2.5rem;
+  margin-top: 1rem;
+}
+.arrow-up-right {
+  display: flex;
+  align-self: flex-end;
+  margin-right: 2.5rem;
 }
 
 /* project.html*/
@@ -372,6 +399,13 @@ h3 {
   background-image: url("img/Mockups_odaalida.com.jpg");
 }
 
+.project-img3 {
+  background-image: url("img/Mockups_odaalida.com.jpg");
+}
+.project-img4 {
+  background-image: url("img/Mockups_odaalida.com.jpg");
+}
+
 .project-color-rectangle {
   width: 100%;
   min-height: 25rem;
@@ -383,6 +417,17 @@ h3 {
 }
 .project-color-rectangle1 {
   background-color: #ffee95;
+}
+.project-color-rectangle2 {
+  background-color: #c698db;
+}
+
+.project-color-rectangle3 {
+  background-color: #92cb9c;
+}
+
+.project-color-rectangle4 {
+  background-color: #00c690;
 }
 
 h4 {
@@ -411,8 +456,6 @@ h4 {
 }
 /* header ends */
 
-/* Brief+Idea starts */
-
 .text-container {
   margin: 0 auto;
   max-width: 700px;
@@ -432,13 +475,13 @@ h4 {
   font-style: normal;
 }
 
-.backgroundimg5 {
+.project-one-bg-img1 {
   background-image: url("img/Mockups_odaalida.com.jpg");
 }
-.backgroundimg6 {
+.project-one-bg-img2 {
   background-image: url("img/odaalida-mockup.jpg");
 }
-.backgroundimg7 {
+.project-one-bg-img3 {
   background-image: url("img/odaalida-mockup.jpg");
 }
 
@@ -450,6 +493,22 @@ h4 {
   width: auto;
   height: 100vh;
   margin-top: 3.5rem;
+}
+
+/* project-two.html */
+
+.project-img2 {
+  background-image: url("img/_rethink_3_Mockup.jpg");
+}
+
+.project-two-bg-img1 {
+  background-image: url("img/rethink_Iphone-Mockup.jpg");
+}
+.project-two-bg-img2 {
+  background-image: url("img/_rethink_3_Mockup.jpg");
+}
+.project-two-bg-img3 {
+  background-image: url("img/_rethink_3_Mockup.jpg");
 }
 
 /* info.html */
@@ -591,14 +650,23 @@ h4 {
   .bg-line {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: center;
   }
+
   .animation-parent {
     margin-right: 0;
   }
 
-  .media-paragraph {
+  .arrow-down-position {
+    position: absolute;
+    bottom: 2.5rem;
+    right: 1rem;
+    left: unset;
+    transform: translate(-50%);
+  }
+
+  .intro-paragraph {
     font-size: 5.5em;
     line-height: 6rem;
     color: black;
@@ -636,8 +704,11 @@ h4 {
   .project-img {
     display: none;
   }
-  .bg-container-breakp {
+  .bp-project-one-bg {
     background-color: #ffee95;
+  }
+  .bp-project-two-bg {
+    background-color: #c698db;
   }
   .project-row1 {
     margin-top: 7.5rem;
@@ -754,9 +825,6 @@ h4 {
   }
 
   .paragraph-info {
-    font-family: neue-haas-grotesk-display, sans-serif;
-    font-weight: 500;
-    font-style: normal;
     font-size: 1.25rem;
     line-height: 1.8rem;
     padding-right: 0;
